<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/swipeRefresh"
        android:icon="@drawable/baseline_icon_refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/maps"
        android:icon="@drawable/baseline_icon_maps"
        android:title="@string/explore"
        app:showAsAction="always" />

    <item
        android:id="@+id/folder"
        android:icon="@drawable/baseline_icon_folder"
        android:title="@string/folder"
        app:showAsAction="always" />

    <item
        android:title=""
        android:icon="@drawable/baseline_icon_vert"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/switchLanguage"
                android:icon="@drawable/baseline_icon_language"
                android:title="@string/language"
                app:showAsAction="never" />
            <item
                android:id="@+id/allowPermission"
                android:icon="@drawable/baseline_icon_info"
                android:title="@string/permission"
                app:showAsAction="never" />
            <item
                android:id="@+id/logout"
                android:title="@string/logout"
                android:icon="@drawable/baseline_icon_exit"
                app:showAsAction="never" >
            </item>

        </menu>
    </item>
</menu>