<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/custom_form_background"
    android:padding="24dp">

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/description" />

    <TextView
        android:id="@+id/label_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_preview"
        android:layout_marginTop="16dp"
        android:text="@string/path_gambar"
        android:textColor="@color/frame3"
        android:textStyle="bold"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/image_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_path"
        android:layout_marginTop="16dp"
        android:text="@string/lorem"
        android:textColor="@color/black"
        android:textSize="16sp" />


</RelativeLayout>