<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ic_map"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/Icon_Maps"
            android:src="@drawable/baseline_icon_maps"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent"
            map:tint="@color/frame3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/click_to_select_location"
            android:textColor="@color/frame3"
            android:textSize="16sp"
            android:textStyle="bold"
            map:layout_constraintBottom_toBottomOf="@+id/ic_map"
            map:layout_constraintStart_toEndOf="@+id/ic_map"
            map:layout_constraintTop_toTopOf="@+id/ic_map" />

        <TextView
            android:id="@+id/address_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_form_background"
            android:hint="@string/LocationStory"
            android:lines="2"
            android:minLines="2"
            android:padding="15dp"
            android:textSize="11sp"
            map:layout_constraintTop_toBottomOf="@+id/ic_map"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/btn_select_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_button_ripple_1"
            android:backgroundTint="@color/frame3"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="0dp"
            android:padding="8dp"
            android:text="@string/continue_button"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:backgroundTint="@null"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toBottomOf="@+id/address_bar" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel_button"
            android:textColor="@color/frame3"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_select_location"
            app:layout_constraintEnd_toStartOf="@+id/btn_select_location"
            app:layout_constraintTop_toTopOf="@+id/btn_select_location" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/frame3" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.NewStoryPickLocation" />
</LinearLayout>
