<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.NewStoryActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.975" />

    <ImageView
        android:id="@+id/story_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/frame3"
        android:contentDescription="@string/image_story_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/horizontal3"
        app:layout_constraintEnd_toEndOf="@id/vertical6"
        app:layout_constraintStart_toStartOf="@id/vertical1"
        app:layout_constraintTop_toTopOf="@id/horizontal1"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/label_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/story_description"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontal4"
        app:layout_constraintStart_toStartOf="@id/vertical1"
        app:layout_constraintTop_toBottomOf="@+id/story_image" />

    <EditText
        android:id="@+id/story_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@drawable/custom_form_background"
        android:gravity="start"
        android:hint="@string/write_description"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:minLines="3"
        android:padding="16dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal5"
        app:layout_constraintEnd_toEndOf="@id/vertical6"
        app:layout_constraintStart_toStartOf="@id/vertical1"
        app:layout_constraintTop_toTopOf="@+id/horizontal4" />

    <LinearLayout
        android:id="@+id/btn_select_location"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_button_ripple_2"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal7"
        app:layout_constraintEnd_toEndOf="@id/vertical6"
        app:layout_constraintStart_toStartOf="@id/vertical1"
        app:layout_constraintTop_toTopOf="@+id/horizontal6">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/ic_pin"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/description"
                android:src="@drawable/baseline_icon_maps"
                app:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/click_to_select_location"
                android:textColor="@color/white" />
        </FrameLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/location_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="@id/vertical6"
        app:layout_constraintStart_toStartOf="@id/vertical1"
        app:layout_constraintTop_toTopOf="@id/horizontal8"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal9">

        <TextView
            android:id="@+id/label_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/field_location"
            android:text="@string/LocationStory"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_clear_location"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/description"
            android:padding="6dp"
            android:src="@drawable/baseline_icon_clear" />

        <TextView
            android:id="@+id/field_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/btn_clear_location"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/custom_form_background"
            android:gravity="start"
            android:lineHeight="18dp"
            android:padding="8dp"
            android:textSize="12sp"
            tools:ignore="UnusedAttribute"
            tools:text="@string/lorem" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/custom_button_ripple_2"
        android:text="@string/upload_story"
        android:textAllCaps="false"
        app:backgroundTint="@color/frame3"
        app:layout_constraintBottom_toTopOf="@+id/horizontal11"
        app:layout_constraintEnd_toEndOf="@id/vertical6"
        app:layout_constraintStart_toStartOf="@id/vertical1"
        app:layout_constraintTop_toTopOf="@+id/horizontal10" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>