<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="15dp"
    card_view:cardElevation="5dp"
    card_view:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_ripple_4"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/story_image"
            android:transitionName="story_image"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/image_story_description"
            android:scaleType="centerCrop"
            android:layout_width="70dp"
            android:layout_height="100dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/frame_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/story_image"
            card_view:layout_constraintTop_toTopOf="@+id/story_image"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/default_avatar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/avatar_profile"
                android:src="@drawable/avatar_profile"
                android:transitionName="defaultAvatar"
                android:contentDescription="@string/profile_avatar" />

            <TextView
                android:id="@+id/story_name"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:transitionName="user_name"
                android:text="@string/person_name"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/frame3" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="5dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/story_image"
            card_view:layout_constraintTop_toBottomOf="@+id/frame_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>